@@ -57,8 +57,14 @@ public class VectorUtilBenchmark {
   private byte[] halfBytesAPacked;
   private byte[] halfBytesB;
   private byte[] halfBytesBPacked;
+  private byte[] int4QuantizedBit;
+  private byte[] binaryQuantized;
+  private byte[] int4QuantizedDibit;
+  private byte[] dibitQuantized;
   private float[] floatsA;
   private float[] floatsB;
+  private short[] shortsA;
+  private short[] shortsB;
   private int expectedHalfByteDotProduct;
   private int expectedHalfByteSquareDistance;
 
@@ -100,10 +106,25 @@ public class VectorUtilBenchmark {
     // random float arrays for float methods
     floatsA = new float[size];
     floatsB = new float[size];
+    shortsA = new short[size];
+    shortsB = new short[size];
     for (int i = 0; i < size; ++i) {
       floatsA[i] = random.nextFloat();
+      shortsA[i] = Float.floatToFloat16(floatsA[i]);
       floatsB[i] = random.nextFloat();
+      shortsB[i] = Float.floatToFloat16(floatsB[i]);
     }
+
+    // arrays for BBQ int4-bit and int4-dibit dot product benchmarks
+    int4QuantizedBit = new byte[size * 4];
+    random.nextBytes(int4QuantizedBit);
+    binaryQuantized = new byte[size];
+    random.nextBytes(binaryQuantized);
+
+    int4QuantizedDibit = new byte[size * 2];
+    random.nextBytes(int4QuantizedDibit);
+    dibitQuantized = new byte[size];
+    random.nextBytes(dibitQuantized);
   }
 
   @Benchmark
@@ -245,6 +266,28 @@ public class VectorUtilBenchmark {
   }
 
   @Benchmark
+  public long int4BitDotProductScalar() {
+    return VectorUtil.int4BitDotProduct(int4QuantizedBit, binaryQuantized);
+  }
+
+  @Benchmark
+  @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public long int4BitDotProductVector() {
+    return VectorUtil.int4BitDotProduct(int4QuantizedBit, binaryQuantized);
+  }
+
+  @Benchmark
+  public long int4DibitDotProductScalar() {
+    return VectorUtil.int4DibitDotProduct(int4QuantizedDibit, dibitQuantized);
+  }
+
+  @Benchmark
+  @Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+  public long int4DibitDotProductVector() {
+    return VectorUtil.int4DibitDotProduct(int4QuantizedDibit, dibitQuantized);
+  }
+
+  @Benchmark
   public int binaryHalfByteDotProductSinglePackedScalar() {
     int v = VectorUtil.int4DotProductSinglePacked(halfBytesA, halfBytesBPacked);
     if (v != expectedHalfByteDotProduct) {
@@ -319,6 +362,11 @@ public class VectorUtilBenchmark {
       jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
   public float floatDotProductVector() {
     return VectorUtil.dotProduct(floatsA, floatsB);
+  }
+
+  @Benchmark
+  public float fp16DotProductScalar() {
+    return VectorUtil.dotProduct(shortsA, shortsB);
   }
 
   @Benchmark
